Add Show API for Category
